# Shomei

./: .clang-format  CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp  matrix_base.hpp  vertex_buffer.hpp
cmake/: glfw.cmake  glm.cmake  sdl2.cmake
ext/: CMakeLists.txt
ext/SDL2/: CMakeLists.txt
